// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`should not allow to render html text 1`] = `
<div class="mi-picker">
  <div class="mi-picker__toolbar">
    <button
      type="button"
      class="mi-picker__cancel mi-haptics-feedback"
    >
      Cancel
    </button>
    <button
      type="button"
      class="mi-picker__confirm mi-haptics-feedback"
    >
      Confirm
    </button>
  </div>
  <div
    class="mi-picker__columns"
    style="height: 264px;"
  >
    <div class="mi-picker-column">
      <ul
        style="transform: translate3d(0, 110px, 0); transition-duration: 0ms; transition-property: none;"
        class="mi-picker-column__wrapper"
      >
        <li
          role="button"
          style="height: 44px;"
          tabindex="0"
          class="mi-picker-column__item mi-picker-column__item--selected"
        >
          <div class="mi-ellipsis">
            &lt;div&gt;option&lt;/div&gt;
          </div>
        </li>
      </ul>
    </div>
    <div
      class="mi-picker__mask"
      style="background-size: 100% 110px;"
    >
    </div>
    <div
      class="mi-hairline-unset--top-bottom mi-picker__frame"
      style="height: 44px;"
    >
    </div>
  </div>
</div>
`;

exports[`should render bottom toolbar when toolbar-position is bottom 1`] = `
<div class="mi-picker">
  <div
    class="mi-picker__columns"
    style="height: 264px;"
  >
    <div class="mi-picker-column">
      <ul
        style="transform: translate3d(0, 110px, 0); transition-duration: 0ms; transition-property: none;"
        class="mi-picker-column__wrapper"
      >
      </ul>
    </div>
  </div>
  <div class="mi-picker__toolbar">
    <button
      type="button"
      class="mi-picker__cancel mi-haptics-feedback"
    >
      Cancel
    </button>
    <button
      type="button"
      class="mi-picker__confirm mi-haptics-feedback"
    >
      Confirm
    </button>
  </div>
</div>
`;
